# accounting

./: .gitignore  README.md  docker-compose.yml
actual_budget_import/: docker-compose.yml  main.py  pyproject.toml
barclays/: entry.py  pyproject.toml  pyrightconfig.json
classification/: messabout.ipynb  pyproject.toml
dbt/: .gitignore  dbt_project.yml  pyproject.toml
dbt/models/00_src/: src_postings.yml
dbt/models/01_stg/: gls_membership_transactions.sql  stg_barclays.sql  stg_barclays.yml  stg_gls.sql  stg_gls.yml  stg_gls_depot.sql  stg_postings.sql  stg_traderepublic.sql  stg_traderepublic_transactions.sql
dbt/models/02_mrt/: accounts.sql  accounts.yml  all_depot_transactions_by_category.sql  barclays_transactions.sql  cosmos_transactions.sql  gls_depot_assets.sql  gls_depot_assets.yml  gls_depot_transactions.sql  gls_depot_transactions_by_category.sql  gls_transactions.sql  hledger_transactions.sql  hledger_transactions.yml  traderepublic_depot_assets.sql  traderepublic_depot_transactions.sql  traderepublic_depot_transactions.yml  traderepublic_transactions.sql  transaction_categories.sql  transactions.sql  transactions_mapped.sql  transactions_mapped.yml
dbt/models/03_analysis/: analysis__cash_overtime_monthly.sql  analysis__expenses_monthly.sql  analysis__investment_tracking.sql  analysis__investments_by_class.sql  analysis__networth_current.sql  analysis__networth_overtime_monthly.sql  analysis__networth_overtime_yearly.sql  analysis__transactions_with_categories.sql  networth_current.sql  networth_overtime_monthly.sql  networth_overtime_yearly.sql
dbt/seeds/: cosmos_balance.csv  gls_assets_grouping.csv  gls_member_balance.csv  traderepublic_grouping.csv  transaction_mapping.csv
depot/: entry.py  pyproject.toml  pyrightconfig.json
evidence_reporting/.evidence/customization/: .profile.json
evidence_reporting/pages/: categories.md  income.md  index.md  transactions.md
evidence_reporting/sources/accounting/: connection.yaml  networth_current.sql  networth_monthly.sql  networth_yearly.sql  transactions_mapped.sql
gls/: entry.py  mise.toml  pyproject.toml  pyrightconfig.json
import_hledger/: load.sh
traderepublic/: entry.py  main.py  pyproject.toml
