[tool.poetry]
name = "classification"
version = "0.1.0"
description = "Env for classification of my tx"
authors = ["Stefan Keidel <1188614+stefankeidel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.4"
pudb = "^2024.1"
ipython = "^8.21.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
