[tool.poetry]
name = "depot"
version = "0.1.0"
description = "Importer for my brokerage data"
authors = ["Stefan Keidel <1188614+stefankeidel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"
fire = "^0.5.0"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
pudb = "^2024.1"
ipython = "^8.21.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.poetry.group.dev]
optional = true
