[tool.poetry]
name = "gls"
version = "0.1.0"
description = "Importer for transactions from my GLS account"
authors = ["Stefan Keidel <1188614+stefankeidel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fire = "^0.5.0"
pandas = "^2.2.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pudb = "^2024.1"
ipython = "^8.12.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"





[tool.poetry.group.dev]
optional = true
