[tool.poetry]
name = "traderepublic"
version = "0.1.0"
description = "Trade Republic Accounting Fun"
authors = ["Stefan Keidel <1188614+stefankeidel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pytr = "^0.4.1"
fire = "^0.7.0"
pandas = "^2.2"
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pudb = "^2024.1.3"
ruff = "^0.9.1"
ipython = "^8.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.poetry.group.dev]
optional = true
