[project]
name = "traderepublic"
version = "0.1.0"
description = "Trade Republic fun"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pytr @ git+https://github.com/grizzlyfred/pytr.git@patch-dt_conv_error_206",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pudb>=2024.1.3",
    "ruff>=0.11.5",
]
